# python-ctools-demo

./: .gitmodules  README.md
cmake-demo/: CMakeLists.txt
cmake-demo/src/: taylor_series.h
cython-demo/cmake-demo/: CMakeLists.txt
cython-demo/cmake-demo/src/: CMakeLists.txt
cython-demo/distutils-demo/src/: taylor.cpp  taylor.pyx
distutils-demo/: setup.py
distutils-demo/src/: taylor_series.cpp
phoneticA/: CMakeLists.txt
phoneticA/src/: CMakeLists.txt  PhoneticAlgorithm.h  Py11PhoneAlg.cpp  Soundex.h
pybind11-demo/: CMakeLists.txt
pybind11-demo/src/: CMakeLists.txt  py11taylor.cpp
